@startuml client-view-tui-events
title Client — TUI Input Events (org.adsl.client.view.tui.events)

skinparam classAttributeIconSize 0
skinparam packageStyle rectangle
hide empty members

package "client.view.tui.events" {

  interface InputEventVisitor {
    +visit(event: ConfirmEvent): TUIScreen
    +visit(event: SelectEvent): TUIScreen
    +visit(event: NavigateLeftEvent): TUIScreen
    +visit(event: NavigateRightEvent): TUIScreen
    +visit(event: NavigateUpEvent): TUIScreen
    +visit(event: NavigateDownEvent): TUIScreen
    +visit(event: CharInputEvent): TUIScreen
    +visit(event: BackspaceEvent): TUIScreen
  }

  abstract class InputEvent {
    {abstract} +accept(visitor: InputEventVisitor): TUIScreen
  }

  class ConfirmEvent {
    +accept(visitor: InputEventVisitor): TUIScreen
  }

  class SelectEvent {
    +accept(visitor: InputEventVisitor): TUIScreen
  }

  class NavigateLeftEvent {
    +accept(visitor: InputEventVisitor): TUIScreen
  }

  class NavigateRightEvent {
    +accept(visitor: InputEventVisitor): TUIScreen
  }

  class NavigateUpEvent {
    +accept(visitor: InputEventVisitor): TUIScreen
  }

  class NavigateDownEvent {
    +accept(visitor: InputEventVisitor): TUIScreen
  }

  class CharInputEvent {
    -character: char
    +CharInputEvent(character: char)
    +getCharacter(): char
    +accept(visitor: InputEventVisitor): TUIScreen
  }

  class BackspaceEvent {
    +accept(visitor: InputEventVisitor): TUIScreen
  }
}

ConfirmEvent -up-|> InputEvent
SelectEvent -up-|> InputEvent
NavigateLeftEvent -up-|> InputEvent
NavigateRightEvent -up-|> InputEvent
NavigateUpEvent -up-|> InputEvent
NavigateDownEvent -up-|> InputEvent
CharInputEvent -up-|> InputEvent
BackspaceEvent -up-|> InputEvent

InputEvent ..> InputEventVisitor : dispatches
InputEventVisitor ..> "client.view.tui.screens.TUIScreen"

note bottom of InputEventVisitor
  Implemented by TUIScreen with no-op defaults;
  concrete screens override only the events they
  care about. Returning a new TUIScreen triggers
  a screen transition.
end note

@enduml
